classDiagram
    %% PawPal+ class design
    %% Keep this file updated so it matches your final implementation.

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
        +int weight
    }

    class Task {
        +str title
        +int duration_minutes
        +Priority priority
        +str pet_name
        +str species_requirement
        +str preferred_time
        +str recurrence
        +is_applicable_to(pet) bool
        +sort_key() tuple
    }

    class Pet {
        +str name
        +str species
        +list~str~ preferences
        +add_preference(pref) None
    }

    class Owner {
        +str name
        +int available_minutes
        +list~Pet~ pets
        +add_pet(pet) None
        +time_budget() int
    }

    class Scheduler {
        +Owner owner
        +list~Task~ tasks
        +add_task(task) None
        +remove_task(task) None
        +build_plan() DailyPlan
        +explain() str
    }

    class ScheduledTask {
        +Task task
        +int start_minute
        +start_time() str
    }

    class SkippedTask {
        +Task task
        +str reason
    }

    class DailyPlan {
        +list~ScheduledTask~ scheduled
        +list~SkippedTask~ skipped
        +int total_minutes_used
        +to_table() list
        +summary() str
    }

    Task --> Priority : has a
    Task ..> Pet : applies to (by pet_name / species)
    Owner "1" o-- "*" Pet : has many
    Scheduler "1" o-- "*" Task : candidate tasks
    Scheduler --> Owner : uses
    Scheduler ..> DailyPlan : produces
    DailyPlan "1" *-- "*" ScheduledTask : contains
    DailyPlan "1" *-- "*" SkippedTask : contains
    ScheduledTask --> Task : wraps
    SkippedTask --> Task : wraps
